src/test/ui/issues/40000-49999/issue-41229-ref-str.rs
pub fn example(ref s: str) {}
//~^ ERROR the size for values of type

fn main() {}
